# axiom

./: .gitignore  CMakeLists.txt  README.md  l5tail.jsonl  l5tail_out.tsv  l6.jsonl  l6out800.tsv  l6sum800.txt  o.err  o.tsv  one.jsonl
bench/: CMakeLists.txt  bench.hpp  bench_main.cpp
bindings/: axiom_sym.cpp
data/: README.md
docs/plans/: 2026-07-05-phase0-1-core.md  2026-07-05-phase2-la.md  2026-07-05-phase3-st1.md  2026-07-05-phase4-num.md  2026-07-05-phase5-sym1.md  2026-07-05-phase6-st2.md  2026-07-05-phase7-sym2.md  2026-07-18-phase-b-mathgen.md  2026-07-18-phase-c-solver.md  2026-07-18-phase8-oracle.md  2026-07-20-l9-ode-oracle-design.md  2026-07-20-phase-d-chain-emission.md  2026-07-21-series-tranche.md
docs/specs/: 2026-07-05-axiom-design.md  2026-07-18-llmopt-oracle.md  2026-07-18-parity-run-1.md
include/ax/core/: bigint.hpp  fft.hpp  nt.hpp  rational.hpp  version.hpp
include/ax/la/: blas.hpp  decomp.hpp  mat.hpp
include/ax/mathgen/: ode.hpp  problems.hpp  series_solve.hpp
include/ax/num/: ode.hpp  opt.hpp  quad.hpp  root.hpp
include/ax/par/: pool.hpp
include/ax/pyrand/: pyrand.hpp
include/ax/search/: search.hpp
include/ax/st/: desc.hpp  dist.hpp  htest.hpp  mcmc.hpp  reg.hpp  rng.hpp  sf.hpp  ts.hpp
include/ax/sym/: budget.hpp  calc.hpp  count_ops.hpp  expand.hpp  expr.hpp  harness.hpp  integrate.hpp  jsonl.hpp  oracle.hpp  parse.hpp  poly.hpp  print.hpp  print_sstr.hpp  series.hpp  series_oracle.hpp  solve.hpp
scripts/: build.cmd  gen_count_ops_fixture.py  gen_pyrand_fixture.py  gen_sstr_fixture.py
src/core/: bigint.cpp  fft.cpp  nt.cpp  rational.cpp
src/la/: blas.cpp  decomp.cpp
src/mathgen/: ode.cpp  problems.cpp  series_solve.cpp
src/num/: ode.cpp  opt.cpp  quad.cpp  root.cpp
src/pyrand/: pyrand.cpp  sha512.cpp
src/search/: beam.cpp  emit.cpp  engine.cpp  firemask.cpp  rules.cpp  rules2.cpp  rules3.cpp  successors.cpp  verify.cpp
src/st/: desc.cpp  dist.cpp  htest.cpp  mcmc.cpp  reg.cpp  rng.cpp  sf.cpp  ts.cpp
src/sym/: calc.cpp  count_ops.cpp  expand.cpp  expr.cpp  harness.cpp  integrate.cpp  jsonl.cpp  oracle.cpp  parse.cpp  poly.cpp  print.cpp  print_sstr.cpp  series.cpp  series_oracle.cpp  solve.cpp
tests/: CMakeLists.txt  smoke_test.cpp
tests/core/: bigint_addsub_test.cpp  bigint_basic_test.cpp  bigint_div_test.cpp  bigint_gcd_pow_test.cpp  bigint_karatsuba_test.cpp  bigint_mul_test.cpp  fft_test.cpp  nt_test.cpp  rational_test.cpp
tests/la/: cholesky_test.cpp  lu_test.cpp  mat_test.cpp  matmul_test.cpp  qr_test.cpp
tests/mathgen/: expression_test.cpp  ode_test.cpp
tests/mathgen/fixtures/: expression_10k.tsv  expression_l1_3.tsv  expression_l4.tsv  expression_l5_8.tsv  ode_fixture.jsonl
tests/num/: ode_test.cpp  opt_test.cpp  quad_test.cpp  root_test.cpp
tests/par/: pool_test.cpp
tests/pyrand/: pyrand_test.cpp
tests/pyrand/fixtures/: pyrand_fixture.tsv
tests/python/: test_axiom_sym.py
tests/search/: chassis_test.cpp  emit_test.cpp  firemask_test.cpp  rules_test.cpp
tests/search/fixtures/: pathology_roots.jsonl
tests/st/: desc_test.cpp  dist_cont_test.cpp  dist_disc_test.cpp  glm_test.cpp  htest_test.cpp  mcmc_test.cpp  reg_test.cpp  rng_test.cpp  sf_test.cpp  ts_test.cpp
tests/sym/: calc_test.cpp  count_ops_test.cpp  expand_test.cpp  expr_test.cpp  integrate_test.cpp  jsonl_test.cpp  oracle_test.cpp  parse_test.cpp  poly_test.cpp  print_sstr_test.cpp  print_test.cpp  series_test.cpp  solve_test.cpp
tests/sym/fixtures/: count_ops_fixture.tsv  sstr_fixture.tsv
tools/: chain_emit_main.cpp  ode_sample_main.cpp  oracle_main.cpp  qual_gate_main.cpp  series_sample_main.cpp
